# tokei-tauri

./: .gitignore  LICENSE  README.md  graphics.html  package-lock.json  package.json
.github/workflows/: linux.yml
data/: life-expectancy.json
src/: index.html  renderer.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
